--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1{
 }
 .link-button{
     text-decoration: none;
-    background-color: orangered;
+    background-image: linear-gradient(45deg, cyan, blue);
     color: white;
     padding: 10px 40px;
     border-radius: 5px;
@@ -47,6 +47,43 @@ h1{
 }
 .mission img{
     width: 50%;
+}
+.develop-limit{
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-size: 150px;
+    background-position: left;
+}
+.global-community{
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-size: 150px;
+    background-position: right;
+}
+#product-head{
+    text-align: center;
+}
+.product img{
+    width: 35%;
+}
+.product{
+    text-align: center;
+}
+#product-1{
+    background-color: hotpink;
+    margin-right: 15px;
+    margin-left: 20px;
+    color: white;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 6px;
+}
+#product-2{
+    background-color: hotpink;
+    margin-left: 15px;
+    margin-right: 20px;
+    color: white;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 6px;
 }
 .mission-1{
     background-color: lightblue;
@@ -73,9 +110,16 @@ h1{
     text-align: center;
     background-color: black;
     color: white;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-radius: 6px;
+    margin-bottom: 20px;
 }
+#font-mekup{
+    font-family: 'Praise', cursive;
+} 
 #foother-color{
     color: tomato;
 }
