added font style

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ h1{
     margin-bottom: 20px;
 }
 #font-mekup{
-    font-family: 'Praise', cursive;
+    font-family: 'Lobster', cursive;
 } 
 #foother-color{
     color: tomato;
